--- a/netflix.html
+++ b/netflix.html
@@ -119,37 +119,37 @@
             <h4>Trending Now</h4>
 
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/1.png" class="card-img-top" alt="m1">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/2.png" class="card-img-top" alt="m2">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/3.png" class="card-img-top" alt="m3">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/4.png" class="card-img-top" alt="m4">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/5.png" class="card-img-top" alt="m5">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/6.png" class="card-img-top" alt="m6">
 
@@ -167,37 +167,37 @@
 
             <h4>Watch It Again</h4>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/7.png" class="card-img-top" alt="m7">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/8.png" class="card-img-top" alt="m8">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/9.png" class="card-img-top" alt="m9">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/10.png" class="card-img-top" alt="m10">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/11.png" class="card-img-top" alt="m11">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/12.png" class="card-img-top" alt="m12">
 
@@ -217,38 +217,38 @@
 
             <h4>New Releases</h4>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/13.png" class="card-img-top" alt="m13">
 
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/14.png" class="card-img-top" alt="m14">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/15.png" class="card-img-top" alt="m15">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/16.png" class="card-img-top" alt="m16">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/17.png" class="card-img-top" alt="m17">
 
             </div>
 
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2 hvr-grow-shadow">
 
                 <img src="movies/18.png" class="card-img-top" alt="m18">
 
